# fcc-scwp-projects

./: .gitignore  README.md
.github/workflows/: fcc-python-project-pipeline.yml  run-python-tests.yml
Arithmetic-Formatter/: arithmetic_arranger.py  main.py  pyproject.toml  test_module.py
Time-Calculator/: main.py  pyproject.toml  test_module.py  time_calculator.py
