[tool.poetry]
name = "fcc-time-calculator"
version = "0.1.0"
description = "[FCC Python Scientific Computing] Time Calculator"
authors = ["Brock Giller <Brock.Giller@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"